No development is scheduled to continue on this branch.  Only SUPER
critical bug fixes should be applied. New development goes into
HEAD as 2.1 for release as 2.2
*** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***

BZFlag 2.0.9
------------

* Check for talk permission for part/quit messages  - uso
* First map no longer ignored in Start Server menu - Ravu al Hemio
* Add the rabidRabbit plugin - LouMan
* Add packet loss kick and related admin commands - Thomas Stauer
* Reclaim lost memory from sound sample - Tupone Alfredo
* Fixed invalid kick speed - Tupone Alfredo
* Fixed bashism on debian rules - Ryan Kavanagh
* Add the rabbitTimer plugin - L4m3r
* Fix some segfaults when re-joining - Tupone Alfredo
* Compliance with gcc-4.2 - Tupone Alfredo
* Fix the build system to be more distro friendly - Tupone Alfredo
* Plugins get flag resets/spawns/grab/drop/transfer - Jeff Myers, Bernt Hansen
* Fix compiler problem with gcc-4 - Tupone Alfredo
* Fixed high fps problem - Frank Thilo
* Added more info for observers - Jeff Myers, Frank Thilo
* torBlock plugin added - Jeff Myers, blast007
* Use mesh position and height for radar - Thomas Stauer
* Add the regFlag plugin - Bernt Hansen
* Fix memory leak from cURL - blast007
* Add the Phoenix plugin - Jeff Myers
* Add favorite server - Frank Thilo
* SDL sound rate fix - Alfredo Tupone
* add bzID and server status to logDetail plugin - Bernt Hansen
* Add -tkannounce to announce tk on admin channel - Bernt Hansen
* Add the serverControl plugin - Bernt Hansen
* Add keepaway plugin - LouMan
* API calls to reset bzdb - Jeff Myers
* API call to get the player pause state. - Jeff Myers
* API calls to reload bans, and other files - Jeff Myers
* API event for shot ends - Jeff Myers
* API command to move a flag - Jeff Myers
* add API exposure for lag, jitter, and packetloss - Jeff Myers
* Add koth plugin - LouMan
* Add timedctf plugin - LouMan
* Add teamflagreset plugin - LouMan
* Add wwzones plugin - LouMan