@@ -40,7 +40,7 @@ class XWindow : public BzfWindow {
     void		setPosition(int x, int y);
     void		setSize(int width, int height);
     void		setMinSize(int width, int height);
-    void		setFullscreen();
+    void		setFullscreen(bool on);
 
     void		warpMouse(int x, int y);
     void		getMouse(int& x, int& y) const;
